@startuml

title __VISION's Class Diagram__\n

  namespace jp.oist.abcvlib {
    namespace inputs {
      namespace vision {
        class jp.oist.abcvlib.inputs.vision.ColorBlobDetector {
            - mContours : List<MatOfPoint>
            {static} - mMinContourArea : double
            + getContours()
            + getSpectrum()
            + process()
            + setColorRadius()
            + setHsvColor()
            + setMinContourArea()
        }
      }
    }
  }
  

  namespace jp.oist.abcvlib {
    namespace inputs {
      namespace vision {
        class jp.oist.abcvlib.inputs.vision.Vision {
            {static} + CAMERA_PERMISSION_REQUEST_CODE : int
            + cameraApp : boolean
            # CENTER_THRESHOLD : Double
            {static} # TAG : String
            # contours : List<MatOfPoint>
            # mIsColorSelected : boolean
            - CENTER_COL : double
            - CENTER_ROW : double
            - centroid : List<Point>
            - frameHeight : int
            - frameWidth : int
            - height : double
            - mCameraId : int
            - phi : double
            - width : double
            + Centroids()
            + Vision()
            + getCENTER_COL()
            + getCentroid()
            + onCameraFrame()
            + onCameraPermissionGranted()
            + onCameraViewStarted()
            + onCameraViewStopped()
            + onDestroy()
            + onPause()
            + onResume()
            + onStart()
            + onTouch()
            # getCameraViewList()
            - converScalarHsv2Rgba()
            - swapCamera()
        }
      }
    }
  }
  

  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mDilatedMask
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mHierarchy
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mHsvMat
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mMask
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mPyrDownMat
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Scalar : mColorRadius
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Scalar : mLowerBound
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Mat : mSpectrum
  jp.oist.abcvlib.inputs.vision.ColorBlobDetector o-- org.opencv.core.Scalar : mUpperBound
  jp.oist.abcvlib.inputs.vision.Vision .up.|> android.view.View.OnTouchListener
  jp.oist.abcvlib.inputs.vision.Vision .up.|> org.opencv.android.CameraBridgeViewBase.CvCameraViewListener2
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.android.CameraBridgeViewBase : mOpenCvCameraView
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Mat : mRgba
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Mat : mRgbaTrans
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Scalar : CONTOUR_COLOR
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Size : SPECTRUM_SIZE
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Scalar : mBlobColorHsv
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Scalar : mBlobColorRgba
  jp.oist.abcvlib.inputs.vision.Vision o-- jp.oist.abcvlib.inputs.vision.ColorBlobDetector : mDetector
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.core.Mat : mSpectrum
  jp.oist.abcvlib.inputs.vision.Vision o-- jp.oist.abcvlib.AbcvlibActivity : abcvlibActivity
  jp.oist.abcvlib.inputs.vision.Vision o-- org.opencv.android.BaseLoaderCallback : mLoaderCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
